--- a/payment.html
+++ b/payment.html
@@ -114,6 +114,10 @@
             window.history.back();
         }
     </script>
+      <!-- 🔹 Trust Bar -->
+    <div class="trust-badges mt-4 flex justify-center">
+        <img src="IMG_3355.jpeg" alt="Trust Badges" class="w-64">
+    </div>
 
 </body>
 </html>
