--- a/Quran.html
+++ b/Quran.html
@@ -34,7 +34,7 @@
     <br>
     <a id="downloadLink" style="display:none;">⬇️ تحميل الفيديو</a>
 
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 
 </body>
 </html>
