--- a/index.html
+++ b/index.html
@@ -62,8 +62,17 @@
           <a href="shopping" class="icon-button">
                 <img src="IMG_3399.jpeg" alt="Shop Now">
           </a>
+        
 
     <!-- زر Track Order -->
+          <button onclick="goToQuranPage()">📖 انتقل إلى صفحة القرآن</button>
+
+          <script>
+              function goToQuranPage() {
+                  window.location.href = "Quran.html";
+             }
+         </script>
+              <!-- زر Track Order -->
           <a href="#tracking-section" class="icon-button">
               <img src="IMG_3372.png" alt="Track Order">
           </a>
