--- a/Quran.html
+++ b/Quran.html
@@ -37,6 +37,7 @@
     <a id="downloadLink" style="display:none;">⬇️ تحميل الفيديو</a>
 
     <script src="scripts.js"></script>
+    <p id="errorMsg" style="color: red; font-weight: bold; display: none;"></p>
 
 </body>
 </html>
