--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
 
  
             <!-- 🔹 PayPal Payment Button -->
+        <!-- ✅ زر الذهاب إلى صفحة ملء البيانات -->
+       <a href="checkout.html" class="bg-purple-700 text-white py-2 px-4 w-full rounded text-lg font-semibold mt-4 text-center block">
+           Proceed to Checkout
+       </a>
             <div id="paypal-button-container" class="mt-4"></div>
         </div>
     </section>
